small changes for windows